# project-pareto

./: .addheader.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  COPYRIGHT.md  LICENSE.md  README.md  codecov.yml  header_text.txt  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  stagedfright.py
.binder/: README.md  README.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: checks.yml
.stagedfright/: README.md  checks.py
Operational Water Management/: Operational Produced Water Management Optimization V1.docx
docs/: Dockerfile  Makefile  README.md  citing.rst  conf.py  copyright.rst  faq.rst  index.rst  license.rst  make.bat
docs/_static/: custom.css
docs/case_studies/: index.rst
docs/getting_started/: index.rst
docs/model_library/: 2022_10_31_206_017_PWTreatment_Technology_matrix.xlsx  index.rst  treatment_technology_matrix.xlsx
docs/onboarding_training/: index.rst
docs/tutorials_examples/: index.rst
docs/user_interface/: how_to_deploy_ui.rst  how_to_install_ui_locally.rst  how_to_use_ui.rst  index.rst
docs/utilities/: Earthquake_Distance.rst  Get_Data.rst  Results.rst  index.rst  visualize.rst
examples/example-1/: demo.ipynb  read_set_param.py  strategic_optimization_results.xlsx
operational_water_management/: operational_produced_water_optimization_model.py
operational_water_management/docs/: operational_produced_water_management_optimization.docx
pareto/: __init__.py  conftest.py
pareto/case_studies/: EXAMPLE_INPUT_DATA_FILE.xlsx  EXAMPLE_INPUT_DATA_FILE_generic_operational_model.xlsx  EXAMPLE_INPUT_DATA_FILE_generic_strategic_model.xlsx  EXAMPLE_INPUT_DATA_FILE_mod.xlsx  Input_File_Track_Changes.txt  input_data_generic_strategic_case_study.xlsx  input_data_generic_strategic_case_study_LAYFLAT_FULL.xlsx  input_data_generic_strategic_case_study_Treatment_Demo.xlsx  integrated_desalination_case_study.xlsx  integrated_desalination_demo.xlsx  large_case_study_Li.xlsx  operational_generic_case_study.xlsx  small_case_study_Li.xlsx  small_strategic_case_study.xlsx  stochastic_toy_study.xlsx  strategic_discap_sc1.xlsx  strategic_discap_sc3.xlsx  strategic_permian_demo.xlsx  strategic_small_case_study.xlsx  strategic_small_case_study_midstream.xlsx  strategic_small_case_study_modified.xlsx  strategic_toy_case_risk_study.xlsx  strategic_toy_case_study.xlsx  strategic_toy_case_study_MINLP.xlsx  strategic_toy_case_study_modified.xlsx  strategic_treatment_demo.xlsx  strategic_treatment_demo_modified.xlsx  strategic_treatment_demo_modified_only_MVC.xlsx  strategic_treatment_demo_reduced.xlsx  strategic_treatment_demo_surrogates.xlsx  strategic_treatment_demo_updated.xlsx  strategic_water_treatment_toy_case_study_t10.xlsx  strategic_water_treatment_toy_case_study_t20.xlsx  strategic_water_treatment_toy_case_study_t52.xlsx  toy_case_study.py  toy_case_study.xlsx  tssp_demsch_sc1.xlsx  tssp_demsch_sc2.xlsx  tssp_demsch_sc3.xlsx  tssp_discap_sc2.xlsx  (+4 more)
pareto/desalination_models/: mee_mvr.py
pareto/integrate_desalination/: integrated_desalination_optimization.py  network_model.py
pareto/operational_water_management/: operational_produced_water_optimization_model.py  run_operational_model.py
pareto/strategic_water_management/: MILP_surrogate_results.xlsx  Sensitivity_on_penalty_treatment_demo.csv  Surrogate_MILP_Results.xlsx  alamo_run.alm  alamo_run.trc  alamo_surrogate.json  debugger.py  eev_tool.py  func_tssp.py  iismodel.ilp  infeasible_model.ilp  model.lp  processing_for_eev.py  processing_for_evpi.py  run_for_eev.py  run_for_evpi.py  run_miqcp_decomp.py  run_scenarios.py  run_strategic_model.py  run_strategic_model_water_quality.py  run_tssp.py  stochastic_model_creation.py  stochastic_results.py  (+34 more)
strategic_water_management/: produced_water_optimization.py
(+226 files in other folders)
